feat(menu): implementado curriculo e estilo navbar  #2

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,40 @@
-<p>menu works!</p>
+<nav class="menu navbar navbar-expand-md navbar-light bg-navbarCostum">
+    <div class="container">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-principal" aria-controls="nav-principal" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+    <div class="collapse navbar-collapse " id="nav-principal">
+        
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#home" class="nav-nome nav-link mx-4">Home </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link nav-nome mx-4" href="#sobremim">Sobre mim</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-nome mx-4" href="#graduacao"> Graduações</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link nav-nome mx-4" href="#projetos" >Projetos </a>
+                  </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle nav-nome" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Redes Sociais
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="https://github.com/DhenSouza" target="_blank"><i class="fab fa-github-square pr-2"></i>Github</a>
+                    <a class="dropdown-item" href="https://www.instagram.com/dhenilson.souza/" target="_blank"><i class="fab fa-instagram pr-2"></i>Instagram</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="https://www.linkedin.com/in/denilson-t-de-souza/" target="_blank"><i class="fab fa-linkedin-in pr-2"></i>LinkedIn</a>
+                  </div>
+                </li>
+                <li class="nav-item pl-5">
+                    <a class="nav-link nav-cv text-white" href="../../assets/IMG/Curriculo.pdf" target="_blank">CV Download</a>
+                  </li>
+              </ul>
+        </div>
+    </div>
+  </nav>
