--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,1 +1,17 @@
-<p>rodape works!</p>
+<footer class="page-footer font-small cor-rodape pt-4">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center">
+                <h4 class="cor-texto"> Muito Obrigado pela Atenção de todos!</h4>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center">
+                <p class="cor-texto">Direitos reservados: Denilson Souza &copy;</p>
+            </div>
+        </div>
+    </div>
+
+</footer>
