feat(body): Completado a implementação  #4

--- a/src/app/corpo/corpo.component.html
+++ b/src/app/corpo/corpo.component.html
@@ -1,6 +1,6 @@
 <div id="home" class=" row row-home m-0 p-0 align-items-end">
 
-    <div class="area-home-col col-12  col-md-6  d-flex  align-items-center justify-content-center bg-dark"
+    <div class="area-home-col col-12  col-md-6  d-flex  align-items-center justify-content-center"
         data-aos="fade-right">
         <div class="text-center" style="margin-top: 10%;">
             <img class="foto rounded-circle" width="200px"
@@ -10,7 +10,7 @@
 
             <h5 class="mt-4 descri-nome">Full Stack Developer</h5>
 
-            <table class="table-borderless rounded   table-style text-left ">
+            <table class="table-borderless rounded   table-style text-left mt-3">
                 <tbody>
                     <tr class=" text-center">
                         <td class="p-4 ">
@@ -33,10 +33,283 @@
                             </a>
                         </td>
                     </tr>
-
-
                 </tbody>
             </table>
         </div>
-
     </div>
+
+    <div class="area-home-col col-sm-12 col-md-6 skills d-flex  align-items-center justify-content-center"
+        data-aos="fade-right">
+        <div class="text-center">
+            <h1 class="titulo-col12 text-secondary">Hard Skills</h1>
+
+            <table class="text-left mt-3">
+                <tr>
+                    <td class="code">JAVA</td>
+                    <td class="regresso"><span class="bar"><span class="html"></span></span></td>
+                </tr>
+                <tr>
+                    <td class=" code">SQL</td>
+                    <td class=" regresso"><span class="bar"><span class="css"></span></span></td>
+                </tr>
+                <tr>
+                    <td class=" code">JAVA SCRIPT</td>
+                    <td class=" regresso"><span class="bar"><span class="boots"></span></span></td>
+                </tr>
+
+                <tr>
+                    <td class=" code">BOOTSTRAP</td>
+                    <td class=" regresso"><span class="bar"><span class="javas"></span></span></td>
+                </tr>
+
+                <tr>
+                    <td class=" code">CSS</td>
+                    <td class=" regresso"><span class="bar"><span class="sql"></span></span></td>
+                </tr>
+
+                <tr>
+                    <td class=" code">HTML5</td>
+                    <td class=" regresso"><span class="bar"><span class="java"></span></span></td>
+                </tr>
+            </table>
+
+        </div>
+    </div>
+</div>
+
+    <div id="sobremim" class="row m-0 p-0 bg-white">
+        <div class=" area-sobremim-texto bg-white col-md-6 dflex align-items-center justify-content-center"
+            data-aos="fade-up">
+            <div class="text-center">
+                <h1 class="mb-5 sobremim-nome">Sobre Mim</h1>
+
+                <p class="texto-sobremim px-5 text-justify"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lorem Ipsum is simply
+                    dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book. It has survived not only five centuries,
+                    but also the leap into electronic typesetting, remaining essentially</p>
+            </div>
+        </div>
+
+        <div class="area-sobre-img col-md-6 d-flex align-items-center justify-content-center" data-aos="fade-up">
+            <div class="text-center">
+                <ul class="list-group">
+                    <li class="list-group-item cor-softskilssCabeca">Soft Skills</li>
+                    <li class="list-group-item cor-softskilss">Persistencia</li>
+                    <li class="list-group-item cor-softskilssSecond">Orientação ao Futuro</li>
+                    <li class="list-group-item cor-softskilss">Reponsabilidade Pessoal</li>
+                    <li class="list-group-item cor-softskilssSecond">Mentalidade de Crescimento</li>
+                    <li class="list-group-item cor-softskilss">Trabalho em equipe</li>
+                    <li class="list-group-item cor-softskilssSecond">Atenção aos Detalhes</li>
+                    <li class="list-group-item cor-softskilss">Proatividade</li>
+                    <li class="list-group-item cor-softskilssSecond">Comunicação</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div id="educacao" class="row  m-0 pl-0  d-flex justify-content-center" data-aos="fade-right">
+        <div class="text-center container ">
+          <div class="area-educacao col  ">
+            <h1 id="educacao" class="educacao-nome my-4" style="color: #686C73">Educação</h1>
+            <div class="row">
+    
+              <div class="col-md-6 ">
+                <div class="card mb-4 shadow-sm">
+                  <div class="card-body">
+                    <div class="card-text" style="height:20vh;">
+    
+                      <i class="fas fa-graduation-cap fa-lg"></i>
+                      <h3 class="instituicao-nome" style="color: #757575;">Fatec Itaquaquecetuba</h3>
+                      <p class="curso-nome">Gestão da Tecnologia da Informação</p>
+                      <span class="curso-ano" style="color:#D9C2AD;">2019 - 2022</span>
+    
+                    </div>
+                  </div>
+                </div>
+              </div>
+    
+              <div class="col-md-6">
+                <div class="card mb-4 shadow-sm">
+                  <div class="card-body">
+                    <div class="card-text" style="height:20vh;">
+    
+                      <i class="fas fa-graduation-cap fa-lg"></i>
+                      <h3 class="instituicao-nome" style="color: #757575;">Recode</h3>
+                      <p class="curso-nome">Desenvolvedor Full Stack</p>
+                      <span class="curso-ano" style="color:#e57373;">2020 - 2021</span>
+    
+                    </div>
+                  </div>
+                </div>
+              </div>
+    
+    
+            </div>
+            <!--row-->
+            <a class="btn btn-dark mb-4" data-toggle="modal" data-target="#siteModal">Veja meus certificados</a>
+          </div>
+          <!--fim col 1-->
+    
+        </div>
+        <!--fim text-center-->
+      </div>
+      <!--row principal-->
+
+    <!--PROJETOS-->
+    <div id="projetos" class="row bg-white m-0 p-0">
+
+        <div class=" col-md-12  skills d-flex  align-items-center justify-content-center ">
+    
+          <div class="text-center ">
+            <h1 class="projetos-nome mt-5" style="color:#686C73;">Meus Projetos</h1>
+    
+            <div class="album py-5 ">
+              <div class="container">
+    
+                <div class="row">
+    
+                  <div class=" col-md-4" data-aos="fade-up">
+                    <div class="zoom-container card mb-4 shadow-sm">
+                      <img class="bd-placeholder-img card-img-top" src="../../assets/IMG/teste.jpg" width="100%" height="225">
+                      <div class="card-body">
+                        <div class="d-flex justify-content-center align-items-center">
+                          <div class=" btn-group">
+                            <button type="button" class="btn btn-projetos">View</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    
+    
+                  <div class=" col-md-4" data-aos="fade-up">
+                    <div class="zoom-container card mb-4 shadow-sm">
+                      <img class="bd-placeholder-img card-img-top" src="../../assets/IMG/teste.jpg" width="100%" height="225">
+                      <div class="card-body">
+                        <div class="d-flex justify-content-center align-items-center">
+                          <div class=" btn-group">
+                            <button type="button" class="btn btn-projetos">View</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    
+    
+                  <div class=" col-md-4" data-aos="fade-up">
+                    <div class="zoom-container card mb-4 shadow-sm">
+                      <img class="bd-placeholder-img card-img-top" src="../../assets/IMG/teste.jpg" width="100%" height="225">
+                      <div class="card-body">
+                        <div class="d-flex justify-content-center align-items-center">
+                          <div class=" btn-group">
+                            <button type="button" class="btn btn-projetos">View</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    
+                  <div class=" col-md-4" data-aos="fade-up">
+                    <div class="zoom-container card mb-4 shadow-sm">
+                      <img class="bd-placeholder-img card-img-top" src="../../assets/IMG/teste.jpg" width="100%" height="225">
+                      <div class="card-body">
+                        <div class="d-flex justify-content-center align-items-center">
+                          <div class=" btn-group">
+                            <button type="button" class="btn btn-projetos">View</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    
+                  <div class=" col-md-4" data-aos="fade-up">
+                    <div class="zoom-container card mb-4 shadow-sm">
+                      <img class="bd-placeholder-img card-img-top" src="../../assets/IMG/teste.jpg" width="100%" height="225">
+                      <div class="card-body">
+                        <div class="d-flex justify-content-center align-items-center">
+                          <div class=" btn-group">
+                            <button type="button" class="btn btn-projetos">View</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    
+                  <div class=" col-md-4" data-aos="fade-up">
+                    <div class="zoom-container card mb-4 shadow-sm">
+                      <img class="bd-placeholder-img card-img-top" src="../../assets/IMG/teste.jpg" width="100%" height="225">
+                      <div class="card-body">
+                        <div class="d-flex justify-content-center align-items-center">
+                          <div class=" btn-group">
+                            <button type="button" class="btn btn-projetos">View</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+    
+          </div>
+          <!--fim text-center-->
+    
+        </div>
+        <!--fim col 1-->
+    
+      </div>
+      <!--row principal-->
+
+
+      <!--Modal-->
+  <div class="modal fade" id="siteModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" style="color:#757575;">Meus Certificados</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="m-2 border">
+            <img src="../../assets/IMG/javaavancado.PNG" class="img-fluid">
+          </div>
+
+          <div class="m-2 border">
+            <img src="./img/certificado2.jpg" class="img-fluid">
+          </div>
+
+          <div class="m-2 border">
+            <img src="./img/certificado3.jpg" class="img-fluid">
+          </div>
+
+          <div class="m-2 border">
+            <img src="./img/certificado4.jpg" class="img-fluid">
+          </div>
+
+          <div class="m-2 border">
+            <img src="./img/certificado5.PNG" class="img-fluid">
+          </div>
+
+          <div class="m-2 border">
+            <img src="./img/certificado6.PNG" class="img-fluid">
+          </div>
+
+          <div class="m-2 border">
+            <img src="./img/certificado7.PNG" class="img-fluid">
+          </div>
+
+
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Sair</button>
+        </div>
+      </div>
+    </div>
+  </div>
