--- a/src/app/corpo/corpo.component.css
+++ b/src/app/corpo/corpo.component.css
@@ -1,3 +1,20 @@
+*, 
+*::after,
+*::before {
+	margin: 0;
+	padding: 0;	
+	box-sizing: border-box;
+
+}
+
+
+
+body{
+	 background-color: #eceff1b4 ;
+	/*background-image:linear-gradient(to right,#dbdcddbe, #dbdcdd9a);  /*(to right,#e0c2ce9c, #ce6c8bb0*/
+	/*background-color: rgba(219, 212, 212, 0.76);*/
+}
+
 .area-home-col{
 	height: 100vh;
 }
@@ -44,3 +61,488 @@ table{
     border-radius: 10px;
 	/*box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, 0.25);   */
 }	
+
+.skills li{
+	margin: 20px 0;
+    width: 400px;
+  
+}
+
+.code{
+	padding: 6px;	
+	color:#757575;
+	font-weight: bold;
+    font-size: 14px;
+    
+
+}
+.regresso{
+	width: 400px;
+	padding: 5px;
+}
+
+
+
+.bar{
+	background-color: white;
+	display: block;
+	height: 10px;
+	border:  1px solid rgba(0,0,0,0.3);
+	border-radius: 4px;
+	overflow: hidden;
+
+}
+
+.bar span{
+	height:10px;
+	float: left;
+	background-color: #D9C2AD; 
+
+}
+
+.html{
+	width: 90%;
+	animation: html 4s;
+}
+
+.css{
+	width: 80%;
+	animation: css 4s;
+}
+
+.boots{
+	width: 85%;
+	animation: boots 4s;
+}
+
+
+.javas{
+	width: 60%;
+	animation: javas 4s;
+}
+
+.sql{
+	width: 70%;
+	animation: sql 4s;
+}
+
+.java{
+	width: 60%;
+	animation: java 4s;
+}
+
+@keyframes html{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 90%;
+	}
+}
+
+
+@keyframes css{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 80%;
+	}
+}
+
+@keyframes boots{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 85%;
+	}
+}
+
+@keyframes javas{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 60%;
+	}
+}
+
+@keyframes nodejs{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 40%;
+	}
+}
+
+@keyframes react{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 50%;
+	}
+}
+
+@keyframes sql{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 70%;
+	}
+}
+
+@keyframes php{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 60%;
+	}
+}
+
+@keyframes java{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 50%;
+	}
+}
+
+.btn-skills{
+    font-size: 25px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 30px;
+    height: 65px;
+    width: 250px;
+    margin-top: 40px;
+    box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, 0.25);   
+}
+
+
+
+@media (max-width: 575.98px){
+	.area-home-col{
+		height: auto;
+	    margin-top: 10%;
+		margin-bottom: 10%;
+		  }
+
+
+	.table-style{
+	width: 300px; 
+	font-size: 12px;
+		
+	}
+	
+	.foto{
+	width: 180px; 
+	margin-top: 15px;
+		
+	}
+
+	.home-nome{
+		font-size: 30px;
+	}
+
+	.front-nome{
+		font-size: 20px;	
+	}
+
+	.icone-span{
+		font-size: 12px;
+	}
+
+
+	
+	.titulo-col2{
+		font-size: 35px;
+		margin-top: -5%;
+	}
+
+	
+	.regresso{
+		width: 250px;
+	}
+	
+	.skills li{
+		width: 250px;
+	}
+	
+	.btn-skills{
+		font-size: 20px;
+		font-weight: bold;
+		text-decoration: none;
+		border-radius: 30px;
+		height: 55px;
+		width: 180px;
+		margin-top: 40px;
+		text-decoration: none;
+		box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, 0.25);   
+	}
+	
+	
+
+}
+
+
+
+
+@media (min-width: 576px) and (max-width: 992px){  
+	.area-home-col{
+		height: auto;
+		margin-top: 10%;
+		margin-bottom: 10%;
+
+		  }
+
+
+	.foto{
+		width: 200px; 
+	
+			
+		}
+
+	.table-style{
+		width: 350px; 
+		font-size: 14px;
+			
+		}
+		
+		.icone-span{
+			font-size: 14px;
+		}
+	
+		
+		.regresso{
+			width: 300px;
+		}
+		
+		.skills li{
+			width: 300px;
+		}
+		
+		.btn-skills{
+			font-size: 22px;
+			font-weight: bold;
+			text-decoration: none;
+			border-radius: 30px;
+			height: 60px;
+			width: 200px;
+			margin-top: 40px;
+			text-decoration: none;
+			box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, 0.25);   
+		}
+
+}
+
+.area-sobremim-texto{
+	height: 100vh;
+}
+
+.texto-sobremim{
+	font-size: 22px;
+	font-family: 'Kanit', sans-serif;
+	color:#757575;
+	
+}
+
+.img-sobremim{
+	border: 8px solid #686C73;
+	opacity: 0.9;
+	box-shadow: 4px 4px 4px 4px rgba(2, 2, 2, 0.25);
+}
+
+.sobremim-nome{
+	color: #686C73;
+	font-size: 40px;
+}
+
+.cor-softskilssCabeca {
+    color: white;
+    background-color: #111826;
+}
+.cor-softskilss {
+    background-color: #213f26;
+    color: #D9C2AD;
+}
+.cor-softskilssSecond {
+    background-color: #686C73;
+    color: #D9C2AD;
+}
+
+
+.area-educacao{
+    padding: 30px;
+}
+
+.curso-ano{
+    font-weight: bold;
+}
+
+
+@media (max-width: 575.98px){
+.educacao-nome{
+    font-size: 30px;
+}
+
+.instituicao-nome{
+    font-size: 18px;
+}
+
+.curso-nome{
+    font-size: 10px;
+}
+
+.curso-ano{
+    font-size: 15px;
+}
+
+}
+
+@media (min-width: 576px) and (max-width: 992px){
+
+    .educacao-nome{
+        font-size: 40px;
+    }
+    
+    .instituicao-nome{
+        font-size: 20px;
+    }
+    
+    .curso-nome{
+        font-size: 15px;
+    }
+    
+    .curso-ano{
+        font-size: 15px;
+    }
+}
+
+.zoom-container {
+    position: relative;
+    overflow: hidden;
+
+  }
+  .zoom-container img {
+    max-width: 100%;
+    -moz-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .zoom-container:hover img {
+    -moz-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.7);
+  }
+
+  .btn-projetos{
+    background-color: #e57373;
+    color: white;
+    border-radius: 5px;
+  }
+
+  .btn-projetos:hover{  
+   opacity: 0.8;
+   color: white;
+
+  }
+
+@media (max-width: 575.98px){
+.projetos-nome{
+font-size: 30px;
+}
+}
+
+@media (min-width: 576px) and (max-width: 992px){ 
+.projetos-nome{
+    font-size: 40px;  
+}
+
+}
+
+
+
+
+
+
+
+.form-control:focus {
+	border-color: #cccccc;
+	outline: 0;
+	-webkit-box-shadow: none;
+			box-shadow: none;
+  }
+
+.area-contato{
+	border-radius: 20px; 
+	box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, 0.2);
+	font-weight: bold;
+	color:#757575;
+	font-size: 20px;
+	background-color: white;
+
+
+}
+
+.area-contato form button{
+	width: 150px;
+	background-color: #e57373;
+	color: white;
+	border-radius: 15px;
+	font-weight: bold;
+	border: 1px solid #e57373;
+
+}
+
+.area-contato form button:hover{
+	background-color: #e57373;
+	opacity: 0.8;
+	color: white;
+border: 1px solid #e57373;
+
+}
+
+
+
+@media (max-width: 575.98px){
+	.row-contato {
+		background-position:initial;
+	
+	}
+
+	.area-contato{
+		font-size: 15px;
+	}
+
+	.area-contato form button{
+		width: 100px;
+		
+	}
+}
+
+
+@media (min-width: 576px) and (max-width: 992px){  
+   .area-contato{
+		font-size: 18px;
+	}
+
+	.area-contato form button{
+		width: 130px;
+	
+	}
+}
